--- a/图论仓库/图论仓库.vcxproj
+++ b/图论仓库/图论仓库.vcxproj
@@ -162,6 +162,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="primal_dual.cpp" />
+    <ClCompile Include="一般图最大匹配.cpp" />
     <ClCompile Include="二分图.cpp" />
     <ClCompile Include="图论仓库.cpp" />
     <ClCompile Include="无向图全局最小割.cpp" />
