--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="普通费用流.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="一般图最大匹配.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
