--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="一般图最大匹配.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="曼哈顿最小生成树.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
