--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="曼哈顿最小生成树.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="图的联通性.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
