--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="图的联通性.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="普通bf.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
