--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="sat.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="小流量最大流.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
