--- a/图论仓库/图论仓库.vcxproj
+++ b/图论仓库/图论仓库.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="dikstra——pbds.cpp" />
     <ClCompile Include="dinic.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -169,8 +170,11 @@
     <ClCompile Include="sat.cpp" />
     <ClCompile Include="一般图最大匹配.cpp" />
     <ClCompile Include="二分图.cpp" />
+    <ClCompile Include="入队优化spfa.cpp" />
     <ClCompile Include="图的联通性.cpp" />
     <ClCompile Include="图论仓库.cpp" />
+    <ClCompile Include="圆方树.cpp" />
+    <ClCompile Include="广义圆方树.cpp" />
     <ClCompile Include="小流量最大流.cpp" />
     <ClCompile Include="无向图全局最小割.cpp" />
     <ClCompile Include="普通bf.cpp" />
