--- a/图论仓库/图论仓库.vcxproj.filters
+++ b/图论仓库/图论仓库.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="圆方树.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="最小割树.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
